# Secure-P2P-File-Transfer

./: 00-Project Plan.md  01-Threat Model Document.md  README.md  Security Audit Checklist.md  pyproject.toml
docs/: SECURITY.md  attack-simulation.md  crypto.md  implementation-plan.md  protocl-design.md  threat-model.md
src/crypto/: key_exchange.py  symmetric.py
src/secure_p2p/crypto/: key_exchange.py  symmetric.py
tests/: encryption_test.py  key_test.py  sample_test.py
